[tool.poetry]
name = "mediterraneabusbot"
version = "0.1.0"
description = ""
authors = ["Massimiliano Montaleone <massimilianomontaleone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.14"
requests = "^2.28.1"
pid = "^3.0.4"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
